--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -90,6 +90,9 @@
 	              <div class="card-stacked">
 	                <div class="card-content"><span class="card-title">Revisores do Evento</span>
 	                  <p>Número de revisores: <spam th:text="${qtdTrilhas}"></spam> </p> 
+	                  <div th:each="revisor : ${revisores}">
+	                  	<p th:text="Revisor: ${revisor.nome}"></p>
+	                  </div>
 	                </div>
 	                <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Gerenciar Revisores</a></div>
 	              </div>
