--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -102,9 +102,9 @@
 	            <div class="card horizontal small">
 	              <div class="card-stacked">
 	                <div class="card-content"><span class="card-title">Trabalhos do Evento</span>
-	                  <p>Submetidos: <spam th:text="${qtdTrilhas}"></spam> </p>
-	                  <p>Revisados: <spam th:text="${qtdTrilhas}"></spam> </p>
-	                  <p>Aguardando revisão: <spam th:text="${qtdTrilhas}"></spam> </p>
+	                  <p>Submetidos: <spam th:text="${qtdTrabalhos}"></spam> </p>
+	                  <p>Revisados: <spam th:text="${qtdTrabalhos}"></spam> </p>
+	                  <p>Aguardando revisão: <spam th:text="${qtdTrabalhos}"></spam> </p>
 	                </div>
 	                <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Gerenciar Trabalhos</a></div>
 	              </div>
