1#	Inicio dos testes para exclusao de trilha.

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -54,9 +54,9 @@
          </div>
         </div>
 
-        <div class="col m4 s12" th:case="${false}">
+       <!--  <div class="col m4 s12" th:case="${false}">
           <p>Não há eventos ativos</p>
-        </div>
+        </div> -->
         
         <div class="center">
           <ul class="pagination">
