--- a/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
@@ -12,23 +12,7 @@
 <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 <body>
-  <nav role="navigation" class="purple darken-4">
-    <div class="nav-wrapper container">
-      <a href="#"><img th:src="@{/img/logotipo_white.png}" alt="Contest"
-        width="200px" /></a>
-      <ul class="white-text right hide-on-med-and-down">
-        <li><a href="#">Link 01</a></li>
-        <li><a href="#">Link 02</a></li>
-      </ul>
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Link 01</a></li>
-        <li><a href="#">Link 02</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse">
-        <i class="material-icons">menu</i>
-      </a>
-    </div>
-  </nav>
+  <div th:include="fragments/header :: header"></div>
   <div class="container page">
     <div class="row opcoes">
       <div class="col s12">
@@ -73,15 +57,7 @@
       </div>
     </form>
   </div>
-  <footer class="page-footer purple darken-4">
-    <div class="footer-copyright">
-      <div class="container">
-        <a href="http://www.npi.quixada.ufc.br" class="white-text">Desenvolvido por NPI - Núcleo de Práticas em Informática</a>
-      </div>
-    </div>
-  </footer>
-  <script type="text/javascript" th:src="@{/webjars/jquery/2.2.4/dist/jquery.min.js}"></script>
-  <script type="text/javascript" th:src="@{/webjars/materialize/0.97.6/dist/js/materialize.min.js}"></script>
+  <div th:include="fragments/footer :: footer"></div>
   <script type="text/javascript">
     $(document).ready(function() {
       //Inicialização dos elementos no JS
