--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -89,10 +89,7 @@
 	            <div class="card horizontal small">
 	              <div class="card-stacked">
 	                <div class="card-content"><span class="card-title">Revisores do Evento</span>
-	                  <p>Número de revisores: <spam th:text="${qtdTrilhas}"></spam> </p> 
-	                  <div th:each="revisor : ${revisores}">
-	                  	<p th:text="Revisor: ${revisor.nome}"></p>
-	                  </div>
+	                  <p>Número de revisores: <spam th:text="${revisores}"></spam> </p> 
 	                </div>
 	                <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Gerenciar Revisores</a></div>
 	              </div>
