--- a/aplicacao/contest/src/main/resources/templates/fragments/header.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/header.html
@@ -12,12 +12,12 @@
 			<div class="nav-wrapper container">
 				<a href="#"><img th:src="@{/img/logotipo_white.png}"
 					alt="Contest" width="200px" /></a>
-				<ul class="white-text right hide-on-med-and-down">
+				 <ul class="white-text right hide-on-med-and-down">
 					<li><a href="#">Nome</a></li>			        
 			        <li><a href="#">Sair&nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
 				</ul>
 				<!-- Dropdown Trigger -->
-				  <!-- <div class="right">  
+				 <!--  <div class="right">  
 					<a class='dropdown-button btn' href='#' data-activates='dropdown1' th:text="|Notificações (${#arrays.length(notificacoes)})|"></a>
 					  Dropdown Structure
 					 <ul id='dropdown1' class='dropdown-content collection '>
@@ -30,13 +30,13 @@
 						     </li>
 					    </div>
 					    <li><a href="#!">three</a></li>
-					  </ul>-->
+					  </ul>
 			      <ul id="nav-mobile" class="side-nav">
 					<li><a href="#">Nome</a></li>			     
 					<li><a href="#">Sair&nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i></a></li>   
 			      </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-		     </div> 
-			
+		     </div>  -->
+			</div>
 		</nav>
 	</div>	
 </body>
