Funcionalidade de Enviar email para participante visão organizador terminada, Adição das classes ConvidarEmailService e Email, controller para envio. Abs: "Foi Adicionado um link no botão convidar na pagina de eventos ativos do organizador para link com o formulário de email"
Não realizado a configuração do servidor de email da universidade, deve
ser realizado quando não estiver em teste.

--- a/aplicacao/contest/src/main/resources/templates/autor/autor_index.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_index.html
@@ -10,13 +10,9 @@
 <!-- CSS  -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet" />
-<link
-	th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}"
-	type="text/css" rel="stylesheet" media="screen,projection" />
-<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}"
-	type="text/css" rel="stylesheet" />
-<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet"
-	media="screen,projection" />
+<link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
+<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}" type="text/css" rel="stylesheet" />
+<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 <body>
 	<nav role="navigation" class="purple darken-4">
