--- a/aplicacao/contest/src/main/resources/templates/organizador/org_convidar_pessoas.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_convidar_pessoas.html
@@ -12,58 +12,52 @@
   </head>
   <body>
     <nav role="navigation" class="purple darken-4">
-      <div class="nav-wrapper container"><a href="#"><img th:src="@{/img/logotipo_white.png}"  alt="Contest" width="200px"/></a>
+      <div class="nav-wrapper container"><a href="#"><img  th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px"/></a>
         <ul class="white-text right hide-on-med-and-down">
-          <li><a href="#">Link 01</a></li>
-          <li><a href="#">Link 02</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Profile</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">Link 01</a></li>
-          <li><a href="#">Link 02</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Profile</a></li>
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
     <div class="container page"><br/>
-      <div class="row opcoes">
-        <a th:href="@{/eventoOrganizador/ativos}">Eventos Ativos</a>
-        <a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
-        <a href="org_revisores.html">Revisores</a>
-        <a href="org_trilhas.html">Trilhas</a>
-      </div>
-      
+      <div class="row opcoes"><a href="org_eventos_ativos.html">Eventos Ativos</a><a href="org_eventos_inativos.html">Eventos Inativos</a><a href="org_revisores.html">Revisores</a><a href="org_trilhas.html">Trilhas</a></div>
       <div class="row">
-      	<h2 class="col s12">Eventos Ativos</h2>
-      </div>
-      
-      <div class="row" th:switch="${!#lists.isEmpty(eventosAtivos)}">
-        <div th:case="${true}">
-         
-         <div th:each="participacaoEventoAtivos : ${eventosAtivos}" class="col m6 s6">
-          <div class="card">
-            <div class="card-content"><span class="card-title" th:text="${participacaoEventoAtivos.evento.nome}" >Nome do Evento</span>
-              <p th:text="|Organizador: ${participacaoEventoAtivos.pessoa.nome}|"></p>
-              <p th:text="|Visibilidade: ${participacaoEventoAtivos.evento.visibilidade.visibilidade}|"></p>
-            </div>
-            <div class="card-action">
-              <a th:href="@{/evento}" class="btn white-text waves-effect waves-light blue-grey">Inativar</a>
-              <a th:href="@{'/eventoOrganizador/convidar/'+ ${participacaoEventoAtivos.evento.nome}}" class="btn white-text waves-effect waves-light blue-grey">Convidar</a>
-            </div>
-          </div>
-         </div>
-        </div>
-
-        <div class="col m4 s12" th:case="${false}">
-          <p>Não há eventos ativos</p>
-        </div>
         
-        <div class="center">
-          <ul class="pagination">
-            <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
-            <li class="active"><a href="#">1</a></li>
-            <li class="waves-effect"><a href="#">2</a></li>
-            <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
-          </ul>
+        <h2>Convidar Pessoa</h2>
+        <div th:if="${erro}" id="error_area" class="row chip red white-text " th:text="#{ERRO_ENVIO_EMAIL}" >
+          <i class="material-icons">close</i>
         </div>
+        <form class="col s12"  th:action="@{/eventoOrganizador/convidar}" th:object="${email}" method="post">
+          <div class="input-field col m6 s6">
+            <input class="validate" placeholder="Exemplo: João" id="nomeConvidado"  th:field="*{nomeConvidado}" type="text" maxlength="25"/>
+            <label for="nomeConvidado">Nome do Convidado</label>
+          </div>
+          <div class="input-field col m6 s6">          
+            <input id="enderecoDestinatario"  th:field="*{enderecoDestinatario}" type="email" class="validate" autocomplete="off" placeholder="exemplo@mail.com" />
+            <label for="enderecoDestinatario">Email do Convidado</label>
+          </div>
+          <div class="input-field col m6 s6">
+            <select id="funcoes" th:field="*{funcao}" name="Funcoes">
+              <option value="" disabled ="disabled" selected="selected">Selecione uma Função</option>
+              <option value="1">Organizador</option>
+              <option value="2">Revisor</option>
+              <option value="3">Autor</option>
+              <option value="4">Coautor</option>
+              <option value="5">Orientador</option>
+            </select>
+            <label for="funcoes_select">Função do Convidado</label>
+          </div>
+          <div class="input-field col s4">
+            <input id="NomeEvento" name="nomeEvento" type="hidden" th:value="${nomeEvento}"/>
+          	<button class="waves-effect waves-light btn white-text" type="submit">Enviar Convite
+          		<i aria-hidden="true" class="fa fa-envelope left"></i>
+          	</button>
+          </div>
+        </form>
       </div>
     </div>
     <footer class="page-footer purple darken-4">
