--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_meus_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_meus_eventos.html
@@ -49,7 +49,7 @@
                   <h5 th:text="'Inicio da Submissão: ' + ${#dates.format(evento.prazoSubmissaoInicial,'dd/MM/yyyy')}">Início da Submissão</h5>
 				  <h5 th:text="'Fim da Submissão: ' + ${#dates.format(evento.prazoSubmissaoFinal,'dd/MM/yyyy')}"></h5>
                 </div>
-                <div class="card-action"><a th:href="@{'/revisor/evento/'+${evento.id}}" class="waves-effect waves-light btn-large white-text">Ver Evento</a></div>
+                <div class="card-action"><a th:href="@{'/revisor/' + ${evento.id} + '/trabalhosRevisao'}" class="waves-effect waves-light btn-large white-text">Ver Trabalhos para revisão</a></div>
               </div>
             </div>
           </div>
