--- a/aplicacao/contest/src/main/resources/templates/fragments/header.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/header.html
@@ -13,7 +13,7 @@
 				<a href="#"><img th:src="@{/img/logotipo_white.png}"
 					alt="Contest" width="200px" /></a>
 				<ul class="white-text right hide-on-med-and-down">
-					<li><a href="#">Nome</a></li>			        
+					<li><a href="#" th:text="${pessoa.nome}"></a></li>			        
 			        <li><a href="#">Sair&nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
 				</ul> 
 
@@ -25,11 +25,8 @@
 						     <li class="collection-item dismissable left ">
 							      <span class="title center" th:text="${notificacoes.titulo}"></span>
 							      <p th:text="${notificacoes.descricao}"></p>
-							         
-							      <p th:text="${notificacoes.pessoa.nome}"></p>
 						     </li>
 					    </div>
-					    <li><a href="#!">three</a></li>
 					  </ul>
 			      <ul id="nav-mobile" class="side-nav">
 					<li><a href="#">Nome</a></li>			     
