--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -81,7 +81,7 @@
 	                <div class="card-content"><span class="card-title">Trilhas do Evento</span>
 	                  <p>Número de trilhas: <spam th:text="${qtdTrilhas}"></spam> </p>
 	                </div>
-	                <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Gerenciar Trilhas</a></div>
+	                <div class="card-action"><a th:href="@{'/eventoOrganizador/trilhas/' + ${evento.id}}" class="btn white-text waves-effect waves-light blue-grey">Gerenciar Trilhas</a></div>
 	              </div>
 	            </div>
 	          </div>
