--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
@@ -14,64 +14,70 @@
     <nav role="navigation" class="purple darken-4">
       <div class="nav-wrapper container"><a href="#"><img th:src="@{/img/logotipo_white.png}"  alt="Contest" width="200px"/></a>
         <ul class="white-text right hide-on-med-and-down">
-          <li><a href="#">Link 01</a></li>
-          <li><a href="#">Link 02</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Profile</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">Link 01</a></li>
-          <li><a href="#">Link 02</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Profile</a></li>
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
     <div class="container page"><br/>
-      <div class="row opcoes"><a href="org_eventos_ativos.html">Eventos Ativos</a><a href="org_eventos_inativos.html">Eventos Inativos</a><a href="org_revisores.html">Revisores</a><a href="org_trilhas.html">Trilhas</a></div>
-      <div class="row">
-        <h2 th:text="'Detalhes da Trilha :' + ${trilha.nome}"></h2>
+      <div class="row opcoes">
+        <a th:href="@{/eventoOrganizador/ativos}">Eventos Ativos</a>
+        <a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
+        <a href="org_revisores.html">Revisores</a>
+        <a th:href="@{/eventoOrganizador/trilhas}">Trilhas</a>
       </div>
-      <div id="error_area" class="row chip red white-text">"Mensagem de Erro"<i class="material-icons">close</i></div>
-      <div class="row">
-        <div class="input-field col m4 s5">  <a href="#modalTrilha" class="waves-effect waves-light btn white-text modal-trigger">Alterar nome da Trilha<i aria-hidden="true" class="fa fa-pencil left"></i></a></div>
-        <div class="input-field col m5 s5"> <a href="#modalExcluir" class="waves-effect waves-light btn white-text modal-trigger">Excluir Trilha<i aria-hidden="true" class="fa fa-trash left">        </i></a></div>
+      
+      <div th:if="${trilhaInexistente}" class="chip red darken-1">
+      	<span class="white-text" th:text="#{TRILHA_INEXISTENTE}"></span>
+      		<i class="material-icons">close</i>
       </div>
-      <h4>Trabalhos inscritos nessa Trilha (3)</h4>
-      <div class="row">
-        <div class="input-field col m12 s6">
-          <table class="striped centered">
-            <thead>
-              <tr> 
-                <th>Trilha</th>
-                <th>Aluno</th>
-                <th>Revisado</th>
-                <th>Revisor</th>
-                <th>Detalhes</th>
-              </tr>
-            </thead>
-            <tbody>             
-              <tr>
-                <td>Um middleware para cidades inteligentes baseados em nuvem</td>
-                <td>Thiago Nogueira</td>
-                <td>Não</td>
-                <td> <a href="#modalRevisor" class="modal-trigger">Atribuir Revisor</a></td>
-                <td> <a href="org_trabalho_detalhes.html">Ver detalhes</a></td>
-              </tr>
-              <tr>
-                <td>Automação Residencial com AWS IoT </td>
-                <td>Zarathon Maia</td>
-                <td>Sim</td>
-                <td> <a href="#modalRevisor" class="modal-trigger">José Sarney</a></td>
-                <td> <a href="org_trabalho_detalhes.html">Ver detalhes    </a></td>
-              </tr>
-              <tr>
-                <td>Uma proposta para testes automatizados em ambientes IoT</td>
-                <td>Dilma Roussef</td>
-                <td>Não</td>
-                <td> <a href="#modalRevisor" class="modal-trigger">Atribuir Revisor</a></td>
-                <td> <a href="org_trabalho_detalhes.html">Ver detalhes    </a></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+      
+      <div class="row" th:if="${trilha != null}">
+      	<h2 th:text="'Detalhes da Trilha :' + ${trilha.nome}"></h2>
+      	
+      	<div class="row">
+	        <div class="input-field col m4 s5">  <a href="#modalTrilha" class="waves-effect waves-light btn white-text modal-trigger">Alterar nome da Trilha<i aria-hidden="true" class="fa fa-pencil left"></i></a></div>
+	        <div class="input-field col m5 s5"> <a href="#modalExcluir" class="waves-effect waves-light btn white-text modal-trigger">Excluir Trilha<i aria-hidden="true" class="fa fa-trash left">        </i></a></div>
+	    </div>
+	    
+	    <div th:if="${#lists.isEmpty(trabalhos)}">
+	    	<h4 class="center">Não há Trabalhos inscritos nessa Trilha</h4>
+	    </div>
+      	
+      	<div th:unless="${#lists.isEmpty(trabalhos)}">
+      		<h4 th:text="${'Trabalhos inscritos nessa Trilha: ' + #lists.size(trabalhos)}"></h4>
+      	
+      		<div class="row">
+		    	<div class="input-field col m12 s6">
+		    		<table class="striped centered">
+		    			<thead>
+		    				<tr>
+		    					<th>Trabalho</th>
+		    					<th>Autor</th>
+				                <th>Revisado</th>
+				                <th>Revisor</th>
+				                <th>Detalhes</th>
+		    				</tr>
+		    			</thead>
+		    			<tbody>
+		    				<tr th:each="trabalho : ${trabalhos}">
+		    					<td th:text="${trabalho.titulo}"></td>
+		    					<td th:text="${trabalho.participacoes[0].pessoa.nome}"></td>
+		    					<td>Não</td>
+		    					<td> <a href="#modalRevisor" class="modal-trigger">Atribuir Revisor</a></td>
+                    			<td> <a th:href="@{'/eventoOrganizador/trilha/' + ${trilha.id} }">Ver Trilha</a></td>
+		    				</tr>
+		    			</tbody>
+			    	</table>
+			    </div>
+			</div>
+	    </div>
       </div>
+      
       <div id="paginacao">         
                 <div class="row col s12 center">
                   <ul class="pagination">
@@ -82,18 +88,26 @@
                   </ul>
                 </div>
       </div>
-      <div id="modalRevisor" class="modal">
-        <div class="modal-content">
-          <h4>Selecione o Revisor desejado</h4>
-          <form>
-            <div class="input-field col m6 s6">
-              <input id="nome_do_revisor" type="text"/>
-              <label for="nome_do_revisor">Nome do Revisor</label>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer"><a href="#" class="modal-action modal-close waves-effect btn-flat">Atribuir</a><a href="#" class="modal-action modal-close waves-effect btn-flat">Remover Revisor</a><a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar  </a></div>
+      
+      <div id="addRevisor">
+      	<form action="#" th:action="@{/eventoOrganizador/atribuir-revisor}" method="post">
+      		<div id="modalRevisor" class="modal">
+	      		<div class="modal-content">
+	      			<h4>Selecione o Revisor desejado</h4>
+	      			<div class="input-field col m6 s6">
+		            	<input id="nome_do_revisor" type="text"/>
+		              	<label for="nome_do_revisor">Nome do Revisor</label>
+		            </div>
+	      		</div>
+	      		<div class="modal-footer">
+	      			<a href="#" class="modal-action modal-close waves-effect btn-flat">Atribuir</a>
+        			<a href="#" class="modal-action modal-close waves-effect btn-flat">Remover Revisor</a>
+        			<a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar  </a>
+	      		</div>
+	      	</div>
+      	</form>
       </div>
+           
       <div id="modalExcluir" class="modal">
         <div class="modal-content">
           <h4>Excluir Trilha</h4>
