- Caminho arquivo salvo no banco - Arquivo salvo com id do usuario no seu nome original

--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_avaliar_trabalho.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_avaliar_trabalho.html
@@ -47,7 +47,7 @@
     		  </blockquote>
             </div>
             <div class="card-action">
-              <button id="baixar-artigo" name="baixar-artigo" class="btn waves-effect waves-light white-text">Fazer Download do Artigo<i aria-hidden="true" class="fa fa-download left"></i></button>
+              <button id="baixar-artigo" th:action="@{}" name="baixar-artigo" class="btn waves-effect waves-light white-text">Fazer Download do Artigo<i aria-hidden="true" class="fa fa-download left"></i></button>
             </div>
           </div>
         </div>
