--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav role="navigation" class="purple darken-4">
-      <div class="nav-wrapper container"><a href="#"><img src="../imgs/logotipo_white.png" alt="Contest" width="200px"/></a>
+      <div class="nav-wrapper container"><a href="#"><img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px"/></a>
         <ul class="white-text right hide-on-med-and-down">
           <li><a href="#">Home</a></li>
           <li><a href="#">Profile</a></li>
@@ -32,7 +32,7 @@
       
       <div class="row">
         <h2>Lista de Eventos Ativos</h2>
-        <div id="error_area" class="row chip red white-text">"Mensagem de Erro"<i class="material-icons">close</i></div>
+        
         <div> 
           <div th:each="participacaoEventoAtivos : ${eventosAtivos}" class="col m6 s12">
             <div class="card">
