--- a/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
@@ -37,15 +37,15 @@
         
         
         <form id="form" class="col s12" th:action="@{/autor/enviarTrabalhoForm}"  th:object="${trabalho}" method="POST" enctype="multipart/form-data">
-          <div class="chip row red left" id="error_area" th:if="${erro}">
+          <div class="chip row red left col m12 s12" id="error_area" th:if="${erro}">
              <span class="white-text" th:text="#{FORMATO_ARQUIVO_INVALIDO}"></span>
              <i class="material-icons">close</i>
           </div>
-          <div class="chip row red left" id="error_area" th:if="${foraDoPrazoDeSubmissao}">
+          <div class="chip row red left col m12 s12" id="error_area" th:if="${foraDoPrazoDeSubmissao}">
              <span class="white-text" th:text="#{FORA_DA_DATA_DE_SUBMISSAO}"></span>
              <i class="material-icons">close</i>
           </div>
-          <div class="chip row red left" id="error_area" th:if="${camposVazios}">
+          <div class="chip row red left col m12 s12" id="error_area" th:if="${camposVazios}">
              <span class="white-text" th:text="#{CAMPOS_VAZIOS}"></span>
              <i class="material-icons">close</i>
           </div>
@@ -63,7 +63,7 @@
             <label for="titulo_do_trabalho">Titulo do Trabalho</label>
           </div>
           
-          <div id="coautores" class="coautores" th:each ="pessoa,count : ${participacoes}" >
+          <div id="coautores" class="coautores" th:each ="pessoa,count : ${trabalho.participacoes}" >
 	          <div class="input-field col m5 s5">
 	            <input id="nome_do_coautor" type="text" th:name="|participacoes[${count.index}].pessoa.nome|" th:value="${pessoa.getPessoa().getNome()}" />
 	            <label for="nome_do_coautor">Autor</label>
