--- a/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
@@ -58,7 +58,7 @@
                   <a th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Trabalho</a>
                 </div>
                 <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'SUBMISSAO'">
-                  <a href="#" class="waves-effect waves-light btn yellow">Reenviar Trabalho</a>
+                  <a th:href="@{'/autor/enviarTrabalho/'+ ${evento.id}}" class="waves-effect waves-light btn yellow">Reenviar Trabalho</a>
                 </div>
                 <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'REVISAO'">
                   <a href="#" class="waves-effect waves-light btn blue">Ver Revisao</a>
