-correcao da UI de reenviar trabalho e de meus eventos -correcao de bug que removia evenros quando o auotr removia o trabalho

--- a/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
@@ -42,13 +42,13 @@
                 <p th:text="${evento.descricao}"></p>
                 <p th:text="'Inicio da Submissão: ' + ${#dates.format(evento.prazoSubmissaoInicial,'dd/MM/yyyy')}"></p>
                 <p th:text="'Fim da Submissão: ' + ${#dates.format(evento.prazoSubmissaoFinal,'dd/MM/yyyy')}"></p>
-                <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'ENVIARTRABALHO'">
+                <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'NAO_TEM_REVISAO'">
                   <a th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Trabalho</a>
+               	  <a th:href="@{'/autor/reenviarTrabalho/'+ ${evento.id}}" class="waves-effect waves-light btn yellow">Listar Trabalhos</a>
                 </div>
-                <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'SUBMISSAO'">
-                  <a th:href="@{'/autor/reenviarTrabalho/'+ ${evento.id}}" class="waves-effect waves-light btn yellow">Reenviar Trabalho</a>
-                </div>
-                <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'REVISAO'">
+                <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'TEM_REVISAO'">
+                  <a th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Trabalho</a>
+               	  <a th:href="@{'/autor/reenviarTrabalho/'+ ${evento.id}}" class="waves-effect waves-light btn yellow">Listar Trabalhos</a>
                   <a href="#" class="waves-effect waves-light btn blue">Ver Revisao</a>
                 </div>
               </div>
