--- a/aplicacao/contest/src/main/resources/templates/fragments/autor_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/autor_menu_navegacao.html
@@ -7,7 +7,7 @@
 	<div th:fragment="autor_menu_navegacao">
 		<div class="row opcoes">
 			<a th:href="@{/autor/participarEvento}" class="ativo">Eventos Ativos</a>
-			<a th:href="@{/autor/meusTrabalhos}">Meus Trabalhos</a>
+			<a th:href="@{/autor/meusTrabalhos}">Meus Eventos</a>
 		</div>
 	</div>
 </body>
